--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ name: Build and push
 uses: docker/build-push-action@v5
 with:
   context: .
-  file: ./Dockerfile
+  file: ./back/Dockerfile
   push: true
   tags: ${{ secrets.DOCKERHUB_USERNAME }}/nest-api:latest
